# telepathy-sunshine-ike

./: Makefile.in  aclocal.m4  configure  configure.in  telepathy-sunshine
data/: Makefile.in  sunshine.manager
debian/: README.Debian  README.source  changelog  control  copyright  lintian-overrides  rules  update-patches.mk  watch
debian/patches/: 0001-Use-python-2.6.patch
sunshine/: Connection_Interface_Contact_Info.py  Makefile.am  Makefile.in  aliasing.py  avatars.py  capabilities.py  channel_manager.py  connection.py  connection_manager.py  contacts.py  contacts_info.py  handle.py  presence.py  protocol.py
sunshine/channel/: Makefile.in  __init__.py  contact_list.py  group.py  text.py
sunshine/lqsoft/: Makefile.am  Makefile.in  gaduapi.py
sunshine/lqsoft/cstruct/: Makefile.in
sunshine/lqsoft/cstruct/fields/: Makefile.in
sunshine/lqsoft/cstruct/test/: Makefile.in
sunshine/lqsoft/pygadu/: Makefile.in  models.py  network_base.py  network_v8.py  twisted_protocol.py
sunshine/lqsoft/utils/: Makefile.in
sunshine/util/: Makefile.am  Makefile.in  config.py  decorator.py
