SUBDIRS = channel lqsoft util

sunshinedir = $(pythondir)/sunshine
sunshine_PYTHON = aliasing.py \
	avatars.py \
	capabilities.py \
	channel_manager.py \
	connection_manager.py \
	connection.py \
	contacts.py \
	Connection_Interface_Contact_Info.py \
	contacts_info.py \
	debug.py \
	handle.py \
	__init__.py \
	presence.py \
	protocol.py \
	Protocol_Interface_Avatars.py
